add_library(chromium STATIC
    base/base_switches.cc
    base/callback_internal.cc
    base/check.cc
    base/check_op.cc
    base/files/file_path.cc
    base/hash/hash.cc
    base/location.cc
    base/logging.cc
    base/memory/ref_counted.cc
    base/memory/weak_ptr.cc
    base/notreached.cc
    base/observer_list_internal.cc
    base/observer_list_types.cc
    base/pending_task.cc
    base/pickle.cc
    base/process/process_handle.cc
    base/rand_util.cc
    base/sequence_checker_impl.cc
    base/sequence_token.cc
    base/sequenced_task_runner.cc
    base/strings/strcat.cc
    base/strings/string16.cc
    base/strings/string_number_conversions.cc
    base/strings/string_piece.cc
    base/strings/string_util.cc
    base/strings/stringprintf.cc
    base/strings/utf_string_conversions.cc
    base/synchronization/atomic_flag.cc
    base/synchronization/lock.cc
    base/task/common/task_annotator.cc
    base/task_runner.cc
    base/third_party/cityhash/city.cc
    base/third_party/nspr/prtime.cc
    base/threading/platform_thread.cc
    base/threading/thread_checker_impl.cc
    base/threading/thread_collision_warner.cc
    base/threading/thread_local_storage.cc
    base/time/time.cc
    base/time/time_override.cc
    base/trace_event/blame_context.cc
    base/trace_event/builtin_categories.cc
    base/trace_event/category_registry.cc
    base/trace_event/heap_profiler_allocation_context.cc
    base/trace_event/heap_profiler_allocation_context_tracker.cc
    base/trace_event/log_message.cc
    base/trace_event/memory_allocator_dump_guid.cc
    base/trace_event/memory_dump_request_args.cc
    base/trace_event/thread_instruction_count.cc
    base/trace_event/trace_arguments.cc
    base/trace_event/trace_config.cc
    base/trace_event/trace_config_category_filter.cc
    base/trace_event/trace_event_impl.cc
    base/trace_event/trace_event_memory_overhead.cc
    base/trace_event/trace_event_stub.cc
    base/trace_event/trace_log.cc
    base/trace_event/traced_value.cc
    base/trace_event/typed_macros_internal.cc
    base/value_iterators.cc
    base/values.cc
    third_party/perfetto/protos/perfetto/common/builtin_clock.pbzero.cc
    third_party/perfetto/protos/perfetto/trace/interned_data/interned_data.pbzero.cc
    third_party/perfetto/protos/perfetto/trace/trace_packet.pbzero.cc
    third_party/perfetto/protos/perfetto/trace/track_event/debug_annotation.pbzero.cc
    third_party/perfetto/protos/perfetto/trace/track_event/track_descriptor.gen.cc
    third_party/perfetto/protos/perfetto/trace/track_event/track_descriptor.pbzero.cc
    third_party/perfetto/protos/perfetto/trace/track_event/track_event.pbzero.cc
    third_party/perfetto/src/base/logging.cc
    third_party/perfetto/src/protozero/field.cc
    third_party/perfetto/src/protozero/message.cc
    third_party/perfetto/src/protozero/message_handle.cc
    third_party/perfetto/src/protozero/packed_repeated_fields.cc
    third_party/perfetto/src/protozero/proto_decoder.cc
    third_party/perfetto/src/protozero/scattered_heap_buffer.cc
    third_party/perfetto/src/protozero/scattered_stream_writer.cc
    third_party/perfetto/src/tracing/debug_annotation.cc
    third_party/perfetto/src/tracing/event_context.cc
    third_party/perfetto/src/tracing/internal/track_event_internal.cc
    third_party/perfetto/src/tracing/trace_writer_base.cc
    third_party/perfetto/src/tracing/track.cc
)
target_include_directories(chromium PUBLIC "${PROJECT_SOURCE_DIR}/lib/chromium")
